# mycop

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  glama.json  install.sh  smithery.yaml
.github/workflows/: docker.yml  release.yml
action/: action.yml
docs/: index.html  llms.txt  robots.txt  sitemap.xml
docs/blog/: ai-code-security-guide-2026.html  mycop-mcp-server.html  mycop-v0.4.0-go-java-support.html  mycop-vs-semgrep-vs-snyk.html  security-bugs-ai-coding-assistants.html  top-10-copilot-vulnerabilities.html
docs/compare/: mycop-vs-semgrep.html  mycop-vs-snyk.html
rules/go/: cgo-injection.yml  command-injection.yml  cors-wildcard.yml  debug-mode.yml  defer-in-loop.yml  dns-rebinding.yml  ecb-mode.yml  error-info-leak.yml  file-permissions.yml  filepath-clean.yml  gin-no-trusted-proxies.yml  goroutine-leak.yml  grpc-no-tls.yml  hardcoded-connection-string.yml  hardcoded-credentials.yml  hardcoded-iv.yml  hardcoded-secrets.yml  http-serve-no-timeout.yml  insecure-deserialization.yml  insecure-random.yml  integer-overflow.yml  jwt-none-alg.yml  ldap-injection.yml  mass-assignment.yml  missing-csrf.yml  missing-tls.yml  nosql-injection.yml  open-redirect.yml  path-traversal.yml  race-condition.yml  regex-dos.yml  sensitive-logging.yml  sql-injection.yml  sql-string-concat.yml  ssrf.yml  template-injection.yml  timing-attack.yml  tls-insecure-skip.yml  unescaped-html.yml  unhandled-error.yml  (+10 more)
rules/java/: command-injection.yml  cors-wildcard.yml  csrf-disabled.yml  debug-mode.yml  ecb-mode.yml  empty-catch.yml  error-info-leak.yml  eval-expression.yml  file-upload-unrestricted.yml  hardcoded-connection-string.yml  hardcoded-credentials.yml  hardcoded-iv.yml  hardcoded-secrets.yml  header-injection.yml  hibernate-injection.yml  idor.yml  insecure-deserialization.yml  insecure-random.yml  insecure-temp-file.yml  insecure-tls.yml  jwt-none-alg.yml  ldap-injection.yml  log-injection.yml  mass-assignment.yml  nosql-injection.yml  open-redirect.yml  path-traversal.yml  regex-dos.yml  runtime-exec.yml  sensitive-logging.yml  session-fixation.yml  spring-actuator-exposed.yml  spring-security-disabled.yml  spring-sql-injection.yml  spring-xss.yml  sql-injection.yml  ssrf.yml  template-injection.yml  timing-attack.yml  trust-all-certs.yml  (+10 more)
rules/javascript/: hardcoded-connection-string.yml
rules/python/: flask-secret-key.yml
src/: cli.rs  fixer.rs  lib.rs  main.rs
src/ai/: anthropic.rs  claude_cli.rs  mod.rs  ollama.rs  openai.rs  prompt.rs  rule_based.rs  types.rs
src/config/: scanrc.rs
src/mcp/: convert.rs  mod.rs  tools.rs  types.rs
src/reporter/: json.rs  sarif.rs  terminal.rs
src/rules/: matcher.rs  mod.rs  parser.rs  registry.rs
src/scanner/: engine.rs  file_discovery.rs  language.rs  mod.rs
tests/: scanner_tests.rs
tests/fixtures/go/: vulnerable.go
tests/fixtures/java/: vulnerable.java
tests/fixtures/python/: with_ignores.py
vscode-extension/: .vscodeignore  README.md  package.json
vscode-extension/src/: extension.ts
