[package]
name = "mycop"
version = "0.1.0"
edition = "2021"
description = "AI Code Security Scanner — detect vulnerabilities in AI-generated code"
license = "MIT"
repository = "https://github.com/mycop/mycop"
readme = "README.md"
keywords = ["security", "scanner", "sast", "ai", "vulnerability"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["tests/", "dist/", "vscode-extension/", ".github/"]

[lib]
name = "mycop"
path = "src/lib.rs"

[[bin]]
name = "mycop"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# AST parsing
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Pattern matching
regex = "1"

# File discovery
walkdir = "2"
ignore = "0.4"
glob = "0.3"

# Terminal output
colored = "2"

# Error handling
anyhow = "1"

# Streaming iterator (required by tree-sitter QueryMatches)
streaming-iterator = "0.1"

# Parallelism
rayon = "1"

# Progress
indicatif = "0.17"

# HTTP client (for AI API calls)
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Chrono for timestamps
chrono = "0.4"

# UUID for SARIF
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
